test/Conversions/smt_to_smtlib_recursive_helper.llzk
// RUN: not llzk-opt --smt-to-smtlib -o /dev/null %s 2>&1 | FileCheck %s
// Purpose: reject recursive pure helpers that would require recursive SMT-LIB function emission.

module {
  func.func @helper(%x: !smt.int) -> !smt.int {
    %0 = func.call @helper(%x) : (!smt.int) -> !smt.int
    return %0 : !smt.int
  }

  smt.solver () : () -> () {
    %x = smt.declare_fun "x" : !smt.int
    %value = func.call @helper(%x) : (!smt.int) -> !smt.int
    %symbol = smt.declare_fun "result" : !smt.int
    %ok = smt.eq %symbol, %value : !smt.int
    smt.assert %ok
    smt.yield
  }
}

// CHECK: error: recursive pure helper calls are not supported by smt-to-smtlib
